added Message data class, changed connection string in webconfig

--- a/AssessmentDuncanS.WebAPI/Web.config
+++ b/AssessmentDuncanS.WebAPI/Web.config
@@ -8,8 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+	<!--changed connection string to get rid of default mdf file and initial catalog -->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AssessmentDuncanS.WebAPI-20220119073252.mdf;Initial Catalog=aspnet-AssessmentDuncanS.WebAPI-20220119073252;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;;Initial Catalog=aspnet-AssessmentDuncanS;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
