--- a/AssessmentDuncanS.Models/AssessmentDuncanS.Models.csproj
+++ b/AssessmentDuncanS.Models/AssessmentDuncanS.Models.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageCreate.cs" />
+    <Compile Include="MessageDetail.cs" />
     <Compile Include="MessageListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
