--- a/AssessmentDuncanS.WebAPI/AssessmentDuncanS.WebAPI.csproj
+++ b/AssessmentDuncanS.WebAPI/AssessmentDuncanS.WebAPI.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\Message\Index.cshtml" />
     <Content Include="Views\Message\Create.cshtml" />
     <Content Include="Views\Message\Details.cshtml" />
+    <Content Include="Views\Message\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
