--- a/AssessmentDuncanS.WebAPI/AssessmentDuncanS.WebAPI.csproj
+++ b/AssessmentDuncanS.WebAPI/AssessmentDuncanS.WebAPI.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Message\Create.cshtml" />
     <Content Include="Views\Message\Details.cshtml" />
     <Content Include="Views\Message\Delete.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTimeOffset.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
